style: fix z-index in nonstatic elements

--- a/src/app/pages/trip-page/trip-page.component.scss
+++ b/src/app/pages/trip-page/trip-page.component.scss
@@ -115,7 +115,7 @@
 .order-details {
   position: sticky;
   top: 0;
-  z-index: 100;
+  z-index: 2;
   align-self: flex-end;
   margin-bottom: 2rem;
   overflow: hidden;
